# yaki

./: README.md  asgi.py  asgi_example.py  example_app.py  pyproject.toml  run_tests.sh  setup.cfg  test_requirements.txt  wsgi.py
examples/chat_bot/: app.py  chat.html  chat_page.html  http_endpoint.py  requirements.txt  site.html  ws_endpoint.py
examples/form_data/: app.py  form.html  requirements.txt  views.py
examples/hello_world/: http.py  websocket.py
examples/hello_world_http/: app.py
src/: applications.py  types.py
src/http/: app.py
src/http/request/: types.py
src/http/response/: types.py
src/websockets/: app.py  types.py
tests/: test_apps.py  test_routes.py
tests/test_http/: strategies.py  test_app.py  test_endpoints.py  test_middleware.py  test_responses.py  test_routes.py  utils.py
tests/test_websockets/: strategies.py  test_app.py  test_endpoints.py
tests/utils/: logging.py  strategies.py
yaki/: __init__.py  apps.py  routes.py  types.py
yaki/http/: app.py  config.py  endpoints.py  middleware.py  responses.py  routes.py  types.py  views.py
yaki/http/request/: methods.py  types.py
yaki/routing/: matchers.py  types.py
yaki/utils/: types.py
yaki/websockets/: app.py  config.py  endpoints.py  routes.py  types.py
