[tool.poetry]
name = "yaki"
version = "0.1.0"
description = "typesafe web framework"
authors = ["Your Name <you@example.com>"]
license = "gpl"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
ruff = "0.1.9"
mypy = "1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
